--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-CODEIAL_ASSET_PATH="./assets"
+CODEIAL_ASSET_PATH="./public/assets"
 CODEIAL_JWT_SECRET='HVP26k3QIk4haRB9WbPDWU0xKapTxScn'
 CODEIAL_SESSION_COOKIE_KEY="Q7DmG0BSyeUXrpYPtv02Imbh8RwZtrKZ"
 CODEIAL_DB='mongodb://bhavyatiwari917:RZLuXvck0tTu1BgF@ac-w5rl1nr-shard-00-00.3eymiaz.mongodb.net:27017,ac-w5rl1nr-shard-00-01.3eymiaz.mongodb.net:27017,ac-w5rl1nr-shard-00-02.3eymiaz.mongodb.net:27017/codeial_production?ssl=true&replicaSet=atlas-wxt3nr-shard-0&authSource=admin&retryWrites=true&w=majority'
