--- a/public/assets/rev-manifest.json
+++ b/public/assets/rev-manifest.json
@@ -1,6 +1,11 @@
 {
-  "chat_engine.js": "chat_engine-fabfa5c797.js",
-  "home_post_comments.js": "home_post_comments-20f81c9dbc.js",
-  "home_posts.js": "home_posts-b750cc5b51.js",
-  "toggle_likes.js": "toggle_likes-8d45a9d9b8.js"
+  "chat_box.css": "chat_box-d5e8d4b4d5.css",
+  "footer.css": "footer-b4a72050b4.css",
+  "header.css": "header-527daed14e.css",
+  "home.css": "home-4eac5f3639.css",
+  "layout.css": "layout-b2f7434b29.css",
+  "post.css": "post-cbfb8600a0.css",
+  "sign-in.css": "sign-in-729dcb3830.css",
+  "sign-up.css": "sign-up-68964b47d2.css",
+  "user_profile.css": "user_profile-787d63450d.css"
 }
