--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My all social media web application",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "Start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prod_start": "NODE_ENV=production nodemon index.js"
   },
@@ -51,5 +52,8 @@
     "gulp-postcss": "^9.0.1",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-terser": "^2.1.0"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
