--- a/.env
+++ b/.env
@@ -12,5 +12,6 @@ CODEIAL_GOOGLE_CLIENT_ID= "401895186341-4o74e39rqteel8otn8nch7n3dna4q2mt.apps.go
 CODEIAL_GOOGLE_CLIENT_SECRET="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"
 CODEIAL_CALL_BACK_URL="http://yourCodeial.com/users/auth/google/callback"
 CODEIAL_ENVIRONMENT="production"
+PORT=8000
 
 
